[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://Level parts/end_portal.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/spawn.gd" type="Script" id=3]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/industrial.v2.png-7f6ebbb7645cfccd264a6e2f34d81c26.stex"

[sub_resource type="RectangleShape2D" id=2]

[node name="spawn" type="KinematicBody2D" groups=[
"spawn",
]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 79, 207, 34, 34 )

[node name="spawn_light" type="Sprite" parent="."]
visible = false
position = Vector2( -0.0135133, -0.11009 )
scale = Vector2( 1.00828, 1.01503 )
texture = SubResource( 1 )
vframes = 2
hframes = 2
region_enabled = true
region_rect = Rect2( 128, 176, 64, 64 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="end_portal" parent="CollisionPolygon2D" instance=ExtResource( 2 )]

[node name="anima_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
[connection signal="timeout" from="anima_timer" to="." method="_on_anima_timer_timeout"]
